css fix for Invite button jumps when "Invite User" modal is shown
#7890
a css fix to keep the button on the right when modal opens

--- a/app/styles/layouts/main.css
+++ b/app/styles/layouts/main.css
@@ -500,6 +500,7 @@ body > .ember-view:not(.liquid-target-container) {
     flex-shrink: 0;
     display: flex;
     align-items: center;
+    margin-left: auto;
 }
 
 .view-actions .btn {
